--- a/full-stack.html
+++ b/full-stack.html
@@ -38,12 +38,16 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://syrocon.join.com/jobs/461673-full-stack-entwickler-java-java-ee-m-w-d-fuer-sicherheitssysteme-an-flughaefen'>Job @ SyroCon Consulting (Eschborn): Full Stack En... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://zizoo.join.com/jobs/461315-full-stack-developer-m-f-x'>Job @ Zizooboats (Berlin): Full-Stack Developer (m... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://www.php-resource.de/jobs/job,45556,Full-Stack-Software-Entwickler-mwd.htm'>Full Stack Software Entwickler (m/w/d) Aktuelle PHP Stellenangebote und jobs  php-resource.de</a></h5> 
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
+<h5><a href='https://jobs.lever.co/beetalents/62b8244d-1a0e-4cff-b70c-c917b138a997'>Bee Talents - Fullstack RoR Developer - Pomar/Pixie [up to 17k PLN net B2B]</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -124,11 +128,11 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
+<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/ov2rbfwT'>Tenable Careers - Senior Software Engineer - Full Stack</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.socode.co.uk/jobs/senior-full-stack-javascript-developer'>Senior Full Stack Javascript Developer with ref. ST95 - SoCode</a></h5> 
+<h5><a href='https://www.socode.co.uk/jobs/senior-full-stack-javascript-developer'>Senior Full Stack Javascript Developer with ref. ST95 - SoCode</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -140,7 +144,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://greenjinn.com/careers/senior-full-stack-developer/'>Senior Full Stack Developer | GreenJinn</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -172,7 +176,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
+<h5><a href='https://www.42jobs.io/laravel/jobs/8423-stage-ou-cdi-developper-full-stack-laravel-react'>
 Stage ou CDI - D?velopper Full Stack Laravel / React at LEMON LEARNING in Paris | Laravel jobs | 42jobs.io
 
 </a></h5> 
@@ -241,7 +245,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/pd85up9ybifmw7b6bpqnoxdsca'>Full-Stack JavaScript Developer | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/pd85up9ybifmw7b6bpqnoxdsca'>Full-Stack JavaScript Developer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Burlington, MA  Boston</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -249,7 +253,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Glendale, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=swYPygwC&__jvsc=Twitter&bid=n3UBlMwa'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -267,7 +271,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Levallois-Perret, France</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
+<h5><a href='http://nationalcreditcenter.applytojob.com/apply/7SjNEGLrml/Full-Stack-C-Developer'>Full Stack C# Developer - National Credit Center - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -301,7 +305,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229917-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999698229917-full-stack-software-engineer'>4Catalyzer Full-Stack Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -325,7 +329,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698052622-senior-fullstack-software-engineer-node-js-typescript-checkout-team-m-f-d-'>Omio Senior Fullstack Software Engineer (Node.js & Typescript) / Checkout Team (m / f / d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698052622-senior-fullstack-software-engineer-node-js-typescript-checkout-team-m-f-d-'>Omio Senior Fullstack Software Engineer (Node.js & Typescript) / Checkout Team (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -365,7 +369,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/atlassian/681f7e9d-1fe8-409e-b4f8-7c890c4174a6'>Atlassian - Senior Fullstack Software Engineer, Bitbucket</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -379,7 +383,7 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://chefcompany1.recruitee.com/o/desarrollador-fullstack-2'>
+<h5><a href='https://chefcompany1.recruitee.com/o/desarrollador-fullstack-2'>
       Desarrollador Fullstack - Chef Company
     </a></h5> 
 <p><span class="badge badge-light">Medellin, Colombia</span></p>
@@ -465,10 +469,6 @@ Remote Senior Full Stack Developer at Ardian Group, Inc. | Rails jobs | 42jobs.i
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/medsidehealthcare/jobs/full-stack-software-developer-aVFytQ93Kr6znWaKjNoogA'>Full Stack Software Developer #1198 job at MedSide Healthcare in Sandy Springs, GA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://relocately.join.com/jobs/457604-full-stack-developer-w-m-x'>Job @ Relocately (Berlin): Full Stack Developer (w... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
